# rust-discord-voice

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
