[package]
name = "rust-discord-voice"
version = "0.1.0"
authors = ["Victor Anderssén <victor.anderssen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.7", default-features = true, features = ["client", "rustls_backend", "model", "voice", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
songbird = "0.1.6"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
lazy_static = "1.4.0"
serde = "1.0.126"
bincode = "1.3.3"